# coffee-hounds-manufacturing-workflows

./: .env.template  README.md  arke_api_schemas_claude_generated.md  camera_verify.py  production_api.md  pyproject.toml  telegram_bot.py
hardcoded-workflow/: arke_client.py  camera_verify.py  constants.py  data_extraction.py  data_loaders.py  environment.py  phase_executor.py  pyproject.toml  run_manual_flow.py  scheduler.py  scheduling.py  telegram_bot.py  utils.py
src/: constants.py  environment.py  llm_executor.py  models.py  run_flow.py  run_manual_flow.py  telegram_bot.py  utils.py
