[tool.poetry]
name = "hardcoded-workflow"
version = "0.1.0"
description = "Hardcoded workflow"
authors = ["mpoemsl & AnkitaMukne"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
tqdm = "^4.66.6"
httpx = "^0.28.1"
pydantic = "^2.12.5"
python-telegram-bot = "^22.6"
opencv-python = "^4.13.0.92"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
known_local_folder = ["utils", "constants", "models", "arke_client", "data_extraction", "data_loaders", "scheduling", "phase_executor"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"