[tool.poetry]
name = "hardcoded-workflow"
version = "0.1.0"
description = "Hardcoded workflow"
authors = ["mpoemsl & AnkitaMukne"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
tqdm = "^4.66.6"
httpx = "^0.28.1"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"